# riak-c-client

./: .gitignore  .riak_pb.vsn  Doxyfile  Makefile.am  Makefile.in  README.md  SConstruct  aclocal.m4  annotated.html  autogen.sh  classes.html  configure  configure.ac  dir_085924db4bed469054a9264cf96b0d5e.html  dir_3756d50f4003bc63fa3fe49460f9c79d.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7e580a9e3cd345dd51216eb99dadc8eb.html  dir_837efec43db232b25645d25225d9ad20.html  dir_9c1c6f327ae6d750199754e3c4f85470.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x68.html  functions_0x69.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  (+382 more)
examples/: Makefile  SConscript  async_example.c  example.c  example_call_backs.c  example_call_backs.h  example_log.c  riak_command.c  riak_command.h  simple.c
examples/include/: example_call_backs.h  example_log.h  riak_command.h
search/: all_0.js  all_1.js  all_10.js  all_13.js  all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_68.js  all_6b.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_75.js  all_76.js  all_77.js  all_79.js  all_b.js  all_f.js  classes_5f.js  classes_72.js  defines_1.js  defines_2.js  defines_5f.js  defines_72.js  enums_0.js  enums_5f.js  enums_72.js  enumvalues_0.js  enumvalues_1.js  enumvalues_65.js  enumvalues_72.js  files_0.js  files_72.js  functions_61.js  (+32 more)
src/: SConscript  main.c  riak.c  riak_array.c  riak_async.c  riak_binary.c  riak_bucket_props.c  riak_bucketprops.c  riak_call_backs.c  riak_command.c  riak_config.c  riak_connection.c  riak_context.c  riak_crdt.c  riak_error.c  riak_event.c  riak_log.c  riak_messages.c  riak_network.c  riak_object.c  riak_operation.c  riak_options.c  riak_print.c  riak_utils.c
src/adapters/: riak_libevent.h
src/include/: config.h.in  riak.h  riak_array.h  riak_async.h  riak_binary.h  riak_bucket_props.h  riak_bucketprops.h  riak_call_backs.h  riak_command.h  riak_config.h  riak_connection.h  riak_context.h  riak_crdt.h  riak_error.h  riak_event.h  riak_log.h  riak_log_config.h  riak_messages.h  riak_network.h  riak_object.h  riak_operation.h  riak_options.h  riak_print.h  riak_types.h
src/include/messages/: riak_2i.h  riak_2index.h  riak_counter.h  riak_delete.h  riak_error.h  riak_get.h  riak_get_bucketprops.h  riak_get_clientid.h  riak_listbuckets.h  riak_listkeys.h  riak_mapreduce.h  riak_ping.h  riak_put.h  riak_reset_bucketprops.h  riak_search.h  riak_security.h  riak_server_error.h  riak_serverinfo.h  riak_set_bucketprops.h  riak_set_clientid.h
src/internal/: riak_binary-internal.h  riak_bucket_props-internal.h  riak_bucketprops-internal.h  riak_call_backs-internal.h  riak_config-internal.h  riak_connection-internal.h  riak_context-internal.h  riak_event-internal.h  riak_messages-internal.h  riak_object-internal.h  riak_operation-internal.h  riak_print-internal.h  riak_utils-internal.h
src/internal/messages/: riak_2i-internal.h  riak_2index-internal.h  riak_counter-internal.h  riak_delete-internal.h  riak_get-internal.h  riak_get_bucketprops-internal.h  riak_get_clientid-internal.h  riak_listbuckets-internal.h  riak_listkeys-internal.h  riak_mapreduce-internal.h  riak_put-internal.h  riak_reset_bucketprops-internal.h  riak_search-internal.h  riak_security-internal.h  riak_serverinfo-internal.h  riak_set_bucketprops-internal.h  riak_set_clientid-internal.h
src/messages/: riak_2i.c  riak_2index.c  riak_counter.c  riak_delete.c  riak_error.c  riak_get.c  riak_get_bucketprops.c  riak_get_clientid.c  riak_listbuckets.c  riak_listkeys.c  riak_mapreduce.c  riak_ping.c  riak_put.c  riak_reset_bucketprops.c  riak_search.c  riak_security.c  riak_server_error.c  riak_serverinfo.c  riak_set_bucketprops.c  riak_set_clientid.c
src/proto/: README
src/tools/: protoc.py
test/cpputest/: RiakCTest.cpp  RiakCTestConnection.cpp  RiakCTestLists.cpp  RiakCTestServerInfo.cpp  TestRunner.cpp  test_logging.c
test/cpputest/include/: RiakCTest.h  RiakCTestConnection.h  RiakCTestError.h  test_logging.h
test/cunit/: SConscript  registry.c  test.c  test_2i.c  test_2index.c  test_array.c  test_binary.c  test_bucket_key_value.c  test_bucketprops.c  test_clientid.c  test_config.c  test_connection.c  test_context.c  test_crdt.c  test_delete.c  test_error.c  test_get.c  test_listbuckets.c  test_listkeys.c  test_log.c  test_mapreduce.c  test_object.c  test_operation.c  test_ping.c  test_put.c  test_search.c  test_server_error.c  test_serverinfo.c
test/cunit/include/: test.h  test_2i.h  test_2index.h  test_array.h  test_binary.h  test_bucket_key_value.h  test_bucketprops.h  test_clientid.h  test_config.h  test_connection.h  test_context.h  test_crdt.h  test_delete.h  test_get.h  test_listbuckets.h  test_listkeys.h  test_mapreduce.h  test_object.h  test_operation.h  test_ping.h  test_put.h  test_search.h  test_server_error.h  test_serverinfo.h
test/ssl_tests/: build_test_node.sh  gen_test_certs.sh  riak_c_client_ssl_tests.c
util/: .gen_pages.sh.swp  gen_pages.sh
